[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easee-smart-charger"
version = "1.0.0"
description = "Smart EV charging controller for EASEE chargers with price optimization and load balancing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "chester.uu@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
keywords = ["easee", "ev", "charger", "smart-charging", "raspberry-pi", "home-automation"]
dependencies = [
    "pyeasee>=0.8.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "aiomqtt>=2.0.0",
    "pyyaml>=6.0",
    "nordpool>=0.3.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
]

[project.scripts]
easee-controller = "src.main:run"

[project.urls]
Homepage = "https://github.com/yourusername/easee-controller"
Documentation = "https://github.com/yourusername/easee-controller#readme"
Repository = "https://github.com/yourusername/easee-controller.git"
Issues = "https://github.com/yourusername/easee-controller/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
